--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
               >
             </p>
             <p><span class="weight">Phone no :</span> +977 981800000</p>
-            <p><span class="weight">Experites :</span> Web Developmnet</p>
+            <p><span class="weight">Experites :</span> Web Development</p>
           </div>
           <div class="right_socials">
             <h1>Social Networks</h1>
