--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <div class="nav_div1">
         <ul>
           <li>
-            <a href="index.htm"
+            <a href="index.html"
               ><img src="images/logo_bg.png" alt="app logo"
             /></a>
           </li>
@@ -84,7 +84,10 @@
           </div>
 
           <div class="long_logo">
-            <img src="images/logo_long.png" alt="logo" />
+            <a href="index.html">
+              <img src="images/logo_long.png" alt="logo" />
+            </a>
+            
           </div>
         </div>
         <div class="right_section">
@@ -107,7 +110,6 @@
               >
             </p>
             <p><span class="weight">Phone no :</span> +977 981800000</p>
-            <p><span class="weight">Experites :</span> Web Development</p>
           </div>
           <div class="right_socials">
             <h1>Social Networks</h1>
