--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       <div class="nav_div1">
         <ul>
           <li>
-            <a href="index.htm"
+            <a href="index.html"
               ><img src="images/logo_bg.png" alt="app logo"
             /></a>
           </li>
@@ -51,6 +51,82 @@
       <div class="projects">
         <div class="projects_left">
           <h3>
+            <a href="https://github.com/Jemnish/GETU.git" target="_blank"
+              >GETU</a
+            >
+          </h3>
+          <p class="projects_p">jenishbudhathoki.com.np > GETU</p>
+          <p>
+            GETU is a virtual tutor designed to help Softwarica students prepare
+            for the GETS (Global English Test System) exam. It offers a practice
+            platform with essential GETS-related information and exercises to
+            enhance learning. Features include an information hub about the exam
+            format and scoring, an interactive bot to improve English skills,
+            query assistance, and a user-friendly interface. The tech stack
+            includes HTML and JavaScript for the frontend, and Python for the
+            backend.
+          </p>
+        </div>
+
+        <div class="projects_right">
+          <img src="images/getu.ico" alt="getu_logo" />
+        </div>
+      </div>
+      <div class="projects">
+        <div class="projects_left">
+          <h3>
+            <a href="https://github.com/Jemnish/Farmerket.git" target="_blank"
+              >Farmerket</a
+            >
+          </h3>
+          <p class="projects_p">jenishbudhathoki.com.np > Farmerket</p>
+          <p>
+            Farmerket is a secure MERN-based web application built with advanced
+            security practices to protect user data and ensure a safe user
+            experience. By following OWASP guidelines, the platform mitigates
+            common web vulnerabilities while strengthening authentication,
+            authorization, and data protection mechanisms. Key features include
+            password hashing with bcrypt.js, JWT-based session management,
+            multi-factor authentication (MFA), input validation with
+            sanitize-html, CSRF protection, and rate limiting. The platform also
+            implements HTTPS with SSL for encrypted communication, role-based
+            access control (RBAC) in MongoDB, and bot protection through Google
+            reCAPTCHA, making Farmerket a highly secure and user-friendly
+            solution.
+          </p>
+        </div>
+
+        <div class="projects_right">
+          <img src="images/Farmarket.png" alt="faremerket_logo" />
+        </div>
+      </div>
+      <div class="projects">
+        <div class="projects_left">
+          <h3>
+            <a
+              href="https://github.com/Jemnish/Bright-Years.git"
+              target="_blank"
+              >Bright Years</a
+            >
+          </h3>
+          <p class="projects_p">jenishbudhathoki.com.np > Bright Years</p>
+          <p>
+            Bright Years is an intuitive platform designed to connect the
+            elderly with the joy of learning and teaching. Whether it’s
+            mastering a new skill like playing the guitar or sharing years of
+            wisdom through customized courses, Bright Years ensures everyone can
+            keep growing and thriving.
+          </p>
+        </div>
+
+        <div class="projects_right">
+          <img src="images/bright.png" alt="Bright-Years_logo" />
+        </div>
+      </div>
+
+      <div class="projects">
+        <div class="projects_left">
+          <h3>
             <a
               href="https://jemnish.github.io/raktabandhu.github.io/"
               target="_blank"
@@ -59,11 +135,12 @@
           </h3>
           <p class="projects_p">jenishbudhathoki.com.np > Rakta Bandhu</p>
           <p>
-            An web-based blood bank app meticulously crafted using fundamental
-            building blocks: CSS, HTML, and JS. Seamlessly bridging the gap
-            between donors and recipients, it not only showcases the power of
-            these technologies but also embodies the spirit of compassion in the
-            digital age.
+            Bright Years is an intuitive platform designed to help the elderly
+            learn new skills and share their expertise through customized
+            courses. With a user-friendly interface and features like multimedia
+            learning and a responsive design, it fosters a community of lifelong
+            learners. Built using React and Tailwind CSS for the frontend,
+            Node.js and Express for the backend, and MongoDB for the database.
           </p>
         </div>
         <div class="projects_right">
@@ -142,7 +219,10 @@
         <hr />
       </div>
       <div class="long_logo">
-        <img src="images/logo_long.png" alt="logo" />
+        <a href="index.html">
+          <img src="images/logo_long.png" alt="logo" />
+        </a>
+        
       </div>
     </main>
 
