--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
       <div class="nav_div1">
         <ul>
           <li>
-            <a href="index.htm"
+            <a href="index.html"
               ><img src="images/logo_bg.png" alt="app logo"
             /></a>
           </li>
@@ -52,47 +52,41 @@
             <h3>My Skills</h3>
             <p class="about_p">jenishbudhathoki.com.np > Skills</p>
             <p>
-              Proficient in web development using foundational HTML, CSS, and
-              JavaScript. Skilled in mobile app development utilizing Flutter
-              framework with Firebase as a backend service. Possess coding
-              expertise in Java programming.
+              Experienced in developing and contributing to multiple web
+              applications using the <b>MERN</b> (MongoDB, Express.js, React, Node.js)
+              stack, with a strong focus on building scalable, responsive, and
+              user-centric solutions. Proficient in designing and implementing
+              RESTful APIs, managing state efficiently, and optimizing database
+              performance to enhance application reliability and speed. Possess
+              a foundational understanding of <b>Python</b>, with basic knowledge of
+              scripting and data processing. Additionally, skilled in mobile
+              application development using <b>Flutter</b>, leveraging <b>Firebase</b> for
+              authentication, real-time data synchronization, and cloud storage,
+              while integrating MongoDB to ensure efficient and scalable backend
+              solutions.
             </p>
           </div>
           <div class="about_me">
-            <h3>My Experince</h3>
+            <h3>Work Experince</h3>
             <p class="about_p">jenishbudhathoki.com.np > Experince</p>
-            <p>None :(</p>
+            <p>No experience, but I’ve spent years perfecting the art of <b>it works on my machine.</b></p>
           </div>
           <div class="about_me">
             <h3>My Education</h3>
             <p class="about_p">jenishbudhathoki.com.np > Education</p>
             <p>
               I graduated from Cosmic Int'l Academy for my high school education
-              and am currently pursuing a career in BSc Hons Computing at
-              Softwarica College of IT and E-commerce.
+              and earned a BSc Hons in Computing from Softwarica College of IT and E-commerce.
             </p>
           </div>
           <div class="about_me">
             <h3><a href=""></a>Some of my projects</h3>
             <p class="about_p">jenishbudhathoki.com.np> Projects</p>
             <p>
-              I have constructed websites and webpages using fundamental
-              technologies like HTML, CSS, and JS. Additionally, one of the
-              project was built using Thymeleaf library and PostgreSQL. On top
-              of that, I have developed some mobile applications using Flutter
-              in conjunction with Firebase.
+              I have developed web applications using the MERN stack (MongoDB, Express.js, React, Node.js) and built several mobile applications using Flutter, integrating Firebase for backend services. Additionally, I have worked on Python-based applications, focusing mainly on automation.
             </p>
           </div>
-          <div class="about_me">
-            <h3>Interests and hobbies</h3>
-            <p class="about_p">jenishbudhathoki.com.np > Intrests</p>
-            <p>
-              I take pleasure in indulging in movies and songs during my leisure
-              time. I have a keen interest in acquiring knowledge about new
-              subjects and emerging technologies. Additionally, I find enjoyment
-              in embracing adventurous experiences.
-            </p>
-          </div>
+          
           <div class="searches">
             <h1>Related searches</h1>
             <p><a href="resume.html">Resume</a></p>
@@ -101,7 +95,10 @@
             <hr />
           </div>
           <div class="long_logo">
-            <img src="images/logo_long.png" alt="logo" />
+            <a href="index.html">
+              <img src="images/logo_long.png" alt="logo" />
+            </a>
+           
           </div>
         </div>
         <div class="right_section">
@@ -110,20 +107,18 @@
           </div>
           <div class="right_names">
             <h1>Jenish Budhathoki</h1>
-            <p>Web Developer</p>
+            <p>Bug Exterminator</p>
           </div>
           <div class="right_details">
-            <p><span class="weight">Born :</span> 2003 April 8th</p>
             <p><span class="weight">Location :</span> Lalitpur, Nepal</p>
-            <p><span class="weight">Occupation :</span> Freelance</p>
-            <p><span class="weight">Experites :</span> Web Developmnet</p>
-            <p><span class="weight">Height :</span> 176 cm</p>
+            <p><span class="weight">Occupation :</span> Freelancing</p>
+            <p><span class="weight">Experience :</span> Web App development</p>
           </div>
           <div class="right_socials">
             <h1>Social Networks</h1>
             <p><a href="https://www.linkedin.com/in/jenish206/">Linkedin</a></p>
             <p>
-              <a href="https://www.instagram.com/jenish_budathoki/"
+              <a href="https://www.instagram.com/jemnishh/"
                 >Instagram</a
               >
             </p>
