--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
           </li>
           <li>
             <div>
-              <p>Contact</p>
+              <p>Projects</p>
               <img src="images/icons/search.png" alt="" />
             </div>
           </li>
